update html and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -412,9 +412,9 @@ footer .subscribe{
     color: #fff;
     
   }
-  input[type="email"],
-  input[type="submit"] {
-    margin-top: 5px;
+  input[type="email"]
+   {
+    margin-top: 0;
     display: inline-block;
   }
   
@@ -438,6 +438,9 @@ input::placeholder{
     color: #fff;
 }
 input[type="submit"] {
+    display: none;
+}
+.subscribe-form button[type="button"]{
     width: 160px;
     height: 40px;
     top: 140px;
@@ -449,18 +452,12 @@ input[type="submit"] {
     border: none;
     color: #fff;
     cursor: pointer;
-  }
-  input[value="Subscribe"]{
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 4%;
-    text-align: left;
-  }
-  .subscribe-form svg{
-    position: relative;
-    right: 55px;
-    top: 7px;
-    cursor: pointer;
-  }
-  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.mailbutton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
