--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body{
     font-family:  "Roboto", sans-serif;
     color: NAVY BLUE;
@@ -113,7 +114,26 @@ header .contact a:hover{
     color: #ffffff;
     margin-bottom: 30px;
 }
-.slider button{
+
+.modal-button:hover{
+    background-color: #404BBF;
+}
+.toggle-checkbox {
+    display: none;
+  }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+.modal-button{
     border: 0 solid transparent;
     border-radius: 5px;
     background-color: #4D5AE5;
@@ -126,11 +146,202 @@ header .contact a:hover{
     padding-right: 10px;
     padding-left: 10px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.toggle-checkbox:checked ~ .modal {
+    display: block;
+}
+.modal .modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 24%;
+    height: 60%;
+}
+
+form #name[placeholder]{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('../images/icons.svg/user.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+form #phone[placeholder]{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('../images/icons.svg/Vector.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+form #email[placeholder]{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('../images/icons.svg/mail.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+.modal .close-button {
+    color: #aaa;
+    float: right;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    padding: 0 5px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
               background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
               box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.slider button:hover{
+
+.modal .close-button:hover,
+.modal .close-button:focus {
+    text-decoration: none;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    padding: 0 5px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+              background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal .modal-content form{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 75px;
+    gap: 6px;
+}
+.modal .modal-content form label{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    color: #8E8F99;
+}
+form #name[placeholder]:focus{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    background-color: white;
+    background-image: url('../images/icons.svg/user(1).png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+form #phone[placeholder]:focus{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-size: 13px;
+    background-color: white;
+    background-image: url('../images/icons.svg/call.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+form #email[placeholder]:focus{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-size: 16px;
+    background-color: white;
+    background-image: url('../images/icons.svg/mail(1).png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+.modal .modal-content form input{
+    height: 40px;
+    top: 84px;
+    gap: 0px;
+    border-radius: 4px;
+    border: 1px solid #2E2F4266;
+    opacity: 0px;
+    color: #2E2F4266;
+}
+.modal .modal-content form input:focus{
+    border: 1px solid #4D5AE5;
+}
+.modal .modal-content form textarea[placeholder]{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    padding: 5px 15px;
+}
+.modal .modal-content p{
+    position: relative;
+    top: 50px;
+    font-weight: 500;
+    display: flex;
+    letter-spacing: 1px;
+}
+form button{
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 25px;
+    padding: 16px ;
+    gap: 10px;
+    border-radius: 4px;
+    opacity: 0px;
+    background-color: #4D5AE5;
+    cursor: pointer;
+    display: block;
+    border: 0;
+    color: #fff;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+              background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+form .buttons:hover{
     background-color: #404BBF;
+}
+form .kutu{
+    display: flex;
+    gap: 3px;
+}
+form .kutu .privacy{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    text-decoration: underline;
+    color: #4D5AE5;
+}
+form .kutu #scales{
+    width: 16px;
+    height: 16px;
+    gap: 0px;
+    border-radius: 2px;
+    border: 1px;
+    opacity: 0px;
 }
 .yazilar{
     height: 400px;
