--- a/css/styles.css
+++ b/css/styles.css
@@ -546,8 +546,8 @@ footer{
 }
 footer .container{
     display: flex;
-    gap: 69px;
-    width: 1260px;
+    gap: 15px;
+    width: 1465px;
     align-items: start;
     position: relative;
     left: 18%;
@@ -625,12 +625,11 @@ footer .subscribe{
   }
   input[type="email"]
    {
-    margin-top: 0;
+    margin-top: 20px;
     display: inline-block;
   }
   
   input[type="email"] {
-    margin-right: 10px;
     width: 264px;
     height: 40px;
     gap: 0px;
