--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ header .contact a:hover{
               box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .slider{
-    height: 800px;
+    height: 672px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,7 +125,7 @@ header .contact a:hover{
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 9999999999999;
     left: 0;
     top: 0;
     width: 100%;
@@ -155,11 +155,16 @@ header .contact a:hover{
 }
 .modal .modal-content {
     background-color: #fff;
-    margin: 5% auto;
+    margin: 0 auto;
+    position: relative;
+    top: 85px;
     padding: 20px;
     border: 1px solid #888;
-    width: 24%;
-    height: 60%;
+    width: 408px;
+    height: 584px;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px 0px #00000024;
+
 }
 
 form #name[placeholder]{
